[package]
name = "big-int"
version = "1.0.4"
edition = "2021"
author = "Maurdekye"
description = "Simple library for arbitrary-precision, arbitrary-base arithmetic, supporting arbitrarily large integers of any base from 2 to 256."
license = "MIT"

[dependencies]
thiserror = "1.0.51"

[dev-dependencies]
rand = "0.8.5"
