[package]
name = "big-int"
version = "2.2.0"
edition = "2021"
author = "Maurdekye"
description = "Simple library for arbitrary-precision, arbitrary-base arithmetic, supporting arbitrarily large integers of any base from 2 to u64::MAX."
readme = "README.md"
license = "MIT"

[dependencies]
thiserror = "1.0.51"

[dev-dependencies]
rand = "0.8.5"
